# DEval-MT

./: .gitignore  DEval_dataset.csv  Dataset.py  Name_Romantic.csv  README.md  SETUP.md  alignment.py  analysis.py  data.csv  data_huge.csv  data_huge_small.csv  morph.py  new_usage_example.py  plots.py  pyproject.toml  requirements.txt  sdk.py  test.py  test_data_mini.csv  test_data_processed.csv  usage_example.py  usage_example_2.py  usage_example_process_data.py
alignment/: __init__.py  alignment_processor.py  dashboard.py  live_dashboard.py  output_capture.py  process_logger.py  progress_tracker.py  word_alignment.py
analysis/: __init__.py  confusion_matrix.py  error_analysis.py  logistic_regression.py  semantic_errors.py  simple_corrected_diverse_error.py
automized_translations/: added_changes.txt  dataset_translation.py  deepl_translate.py  example_commandline_output_translation.txt  google_translate.py  gpt.py  gpt_translate.py  list_translator.py  microsoft_translate.py  ms_dl_translator.py  retranslate_errors.py  systran.py  systran_translate.py  test_list_translator.py  translator.py
create_deval_synth/: .~lock.dataset.csv#  .~lock.output.csv#  Instance.py  adjectives.py  create_dataset.py  dataset.csv  dataset_old.txt  dataset_tmp.csv  declensions.py  groups.py  groups_new.py  groups_old_sorted.py  main.py  names.py  names_romance.csv  new_sentences.csv  output.csv  sort.py  sorted_dataset.csv  templates.py  test.py
deval_mt/: __init__.py
human_eval/: analyis_results_h_eval_es.csv  analyis_results_h_eval_it.csv  analyis_results_h_eval_ru.csv  (+23 more)
(+336 files in other folders)
