[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deval-mt"
version = "0.1.0"
description = "Gender Bias Evaluation for Machine Translation (SDK only)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "DEval-MT Team" } ]
dependencies = [
    "pandas",
    "polars",
    "numpy",
    "simalign",
    "rich",
    "spacy",
    "scipy",
    "statsmodels",
    "matplotlib",
    "qalsadi",
]

[project.optional-dependencies]
translation = [
    "google-cloud",
    "google-cloud-translate",
    "google-cloud-storage",
    "deepl",
    "openai"
]

[tool.setuptools]
py-modules = ["sdk", "Dataset", "analysis"]
packages = ["alignment", "morphological_analysis", "deval_mt"]

